<resources>
    <string name="One">One,One</string>
    <string name="Two">One,Two</string>
    <string name="Three">One,Three</string>
    <string name="Four">One,Four</string>
    <string name="Five">Two,One</string>
    <string name="Six">Two,Two</string>
    <string name="Seven">Two,Three</string>
    <string name="Eight">Two,Four</string>
    <string name="Nine">Three,One</string>
    <string name="Ten">Three,Two</string>
    <string name="Eleven">Three,Three</string>
    <string name="Twelve">Three,Four</string>
    <string name="Thirteen">Four,One</string>
    <string name="Fourteen">Four,Two</string>
    <string name="Fifteen">Four,Three</string>
    <string name="Sixteen">Four,Four</string>
    <string name="app_name">this is a layout</string>
    <string name="action_settings">action_settings</string>
    <string name="One1"> RED</string>
    <string name="Two1">GREEN</string>
    <string name="Three1">BLUE</string>
    <string name="Four1">PURPLE</string>
    <string name="Five1">YELLOW</string>
    <string name="Six1">ORANGE</string>
    <string name="Seven1">Pink here</string>
    <string name="One2">Open...</string>
    <string name="Two2">Ctrl-O</string>
    <string name="Three2">Save...</string>
    <string name="Four2">Ctrl-S</string>
    <string name="Five2">Save As...</string>
    <string name="Six2">Ctrl-Shift-S</string>
    <string name="Seven2">X Import...</string>
    <string name="Eight2">X Export...</string>
    <string name="Nine2">  Ctrl-E</string>
    <string name="Ten2">  Quit</string>
    <string name="Twelve2">    </string>
</resources>