<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/firstText"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/One" />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Two" />

        <TextView
            android:id="@+id/thirdText"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Three" />

        <TextView
            android:id="@+id/fourthText"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Four" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fifthText"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Five" />

        <TextView
            android:id="@+id/sixthText"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Six" />

        <TextView
            android:id="@+id/seventhText"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Seven" />

        <TextView
            android:id="@+id/eighthText"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Eight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ninthText"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Nine" />

        <TextView
            android:id="@+id/tenthText"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Ten" />

        <TextView
            android:id="@+id/eleventhText"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Eleven" />

        <TextView
            android:id="@+id/twelfthText"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Twelve" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/thirteenthText"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Thirteen" />

        <TextView
            android:id="@+id/fourteenthText"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Fourteen" />

        <TextView
            android:id="@+id/fifteenthText"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:textColor="#ECE4EE"
            android:text="@string/Fifteen" />

        <TextView
            android:id="@+id/sixteenthText"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:background="#552BA3"
            android:gravity="center"
            android:text="@string/Sixteen"
            android:textColor="#ECE4EE" />
    </LinearLayout>

</LinearLayout>