<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C89C27B0"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12sp"
            android:text="@string/One2" />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Two2"
            android:layout_marginLeft="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:visibility="visible" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/thirdText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12sp"
            android:layout_weight="1"
            android:text="@string/Three2" />

        <TextView
            android:id="@+id/fourthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:text="@string/Four2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fifthText"
            android:layout_width="307dp"
            android:layout_marginLeft="12sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Five2" />

        <TextView
            android:id="@+id/sixthText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Six2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/otherText"
            android:layout_width="371dp"
            android:layout_height="3sp"
            android:layout_weight="1"
            android:background="#F6F7F4"
            android:text="@string/Twelve2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/seventhText"
            android:layout_width="283dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Seven2" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/eighthText"
            android:layout_width="346dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Eight2" />

        <TextView
            android:id="@+id/ninthText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="17sp"
            android:layout_weight="1"
            android:text="@string/Nine2" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/oText"
            android:layout_width="371dp"
            android:layout_height="3sp"
            android:layout_weight="1"
            android:background="#F6F7F4"
            android:text="@string/Twelve2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tenthText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12sp"
            android:layout_weight="1"
            android:text="@string/Ten2" />

    </TableRow>

</TableLayout>