<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/firstText"
        android:layout_width="91sp"
        android:layout_height="62sp"
        android:layout_marginTop="116sp"
        android:background="#FF0000"
        android:padding="20dp"
        android:text="@string/One1"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="288sp" />

    <TextView
        android:id="@+id/secondText"
        android:layout_width="93sp"
        android:layout_height="67sp"
        android:background="#8BC34A"
        android:padding="20sp"
        android:text="@string/Two1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/thirdText"
        android:layout_width="127sp"
        android:layout_height="72sp"
        android:background="#2196F3"
        android:padding="20sp"
        android:text="@string/Three1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="140sp" />

    <TextView
        android:id="@+id/fourthText"
        android:layout_width="103sp"
        android:layout_height="68sp"
        android:background="#673AB7"
        android:padding="20sp"
        android:text="@string/Four1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fifthText"
        android:layout_width="95sp"
        android:layout_height="64sp"
        android:layout_marginBottom="424dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/Five1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="45dp" />

    <TextView
        android:id="@+id/sixthText"
        android:layout_width="100sp"
        android:layout_height="64sp"
        android:background="#F44336"
        android:padding="20dp"
        android:text="@string/Six1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="115sp" />

    <TextView
        android:id="@+id/seventhText"
        android:layout_width="418dp"
        android:layout_height="89dp"
        android:background="#EB8FD0"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Seven1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="243dp" />

</androidx.constraintlayout.widget.ConstraintLayout>